Input Manager and List refactoring